TVP-330: added developer information and showing dialog
added thai text, updated colors and background

--- a/app/src/main/res/layout/fragment_developer_information.xml
+++ b/app/src/main/res/layout/fragment_developer_information.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:background="#231F20"
         android:padding="18dp">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -13,8 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sukhumvittadmai_bold"
-            android:text="@string/about"
-            android:textColor="#ffffff"
+            android:text="@string/developer_information"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +27,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/sukhumvittadmai_medium"
             android:text="@string/app"
-            android:textColor="@color/white_almost_opaque"
+            android:textColor="@color/grey_heading"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -47,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/view_separator_app"
@@ -59,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_user_id"
@@ -72,7 +73,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/sukhumvittadmai_medium"
             android:text="@string/device"
-            android:textColor="@color/white_almost_opaque"
+            android:textColor="@color/grey_heading"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_app_version" />
@@ -93,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/view_separator_device"
@@ -105,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_model"
@@ -117,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_os"
@@ -129,7 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_device_version"
@@ -141,7 +142,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sukhumvittadmai_normal"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_platform"
@@ -155,7 +156,7 @@
             android:autoLink="all"
             android:fontFamily="@font/sukhumvittadmai_normal"
             android:text="@string/internet"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_date_time" />
