--- a/app/src/main/res/layout/fragment_developer_information.xml
+++ b/app/src/main/res/layout/fragment_developer_information.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sukhumvittadmai_bold"
-            android:text="@string/developer_information"
+            android:text="@string/about"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
