--- a/app/src/main/res/layout/fragment_developer_information.xml
+++ b/app/src/main/res/layout/fragment_developer_information.xml
@@ -158,6 +158,7 @@
             android:text="@string/internet"
             android:textColor="@color/white"
             android:textSize="14sp"
+            android:textColorLink="@color/link"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_date_time" />
 
