--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -140,5 +140,6 @@
     <color name="genre_unselected_text">#393939</color>
 
     <color name="grey_heading">#999999</color>
+    <color name="link">#007AFF</color>
 
 </resources>
