implemented skip to next/previous episode

--- a/brightcovelibrary/src/main/res/values/dimens.xml
+++ b/brightcovelibrary/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="player_padding">10dp</dimen>
     <dimen name="offline_player_padding">20dp</dimen>
     <dimen name="live_full_screen_bottom">60dp</dimen>
+    <dimen name="skip_episode_size">15sp</dimen>
 
 </resources>
