--- a/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
@@ -1,39 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <RelativeLayout
-        android:id="@+id/subtitle_parent_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:visibility="gone">
-        <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_skip_episode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_1_3"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.33" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_2_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.67" />
+
+        <RelativeLayout
+            android:id="@+id/rl_episode_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:visibility="visible"
+            tools:background="#090909"
+            android:layout_marginEnd="8dp"
+            app:layout_goneMarginEnd="16dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/subtitle_parent_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_previous"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="4dp"
                 android:layout_gravity="center"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:drawableStart="@drawable/subtitles"
-                android:drawableLeft="@drawable/subtitles"
+                android:drawableStart="@drawable/ic_previous"
                 android:drawablePadding="8dp"
                 android:gravity="center"
+                android:padding="4dp"
+                android:text="@string/previous_episode"
+                android:textColor="#FFF"
+                android:textSize="@dimen/skip_episode_size" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/subtitle_parent_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:visibility="gone"
+            tools:background="#090909"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guide_2_3"
+            app:layout_constraintStart_toEndOf="@id/guide_1_3"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible">
+
+            <TextView
+                android:id="@+id/tv_subtitles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/subtitles"
+                android:drawablePadding="8dp"
+                android:gravity="center"
+                android:padding="4dp"
                 android:text="@string/subtitles"
                 android:textColor="#FFF"
-                android:textSize="15sp" />
+                android:textSize="@dimen/skip_episode_size" />
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_episode_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:visibility="visible"
+            android:layout_marginStart="8dp"
+            app:layout_goneMarginStart="16dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:background="#090909"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/subtitle_parent_view"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:drawableEnd="@drawable/ic_next"
+                android:drawablePadding="8dp"
+                android:gravity="center"
+                android:padding="4dp"
+                android:text="@string/next_episode"
+                android:textColor="#FFF"
+                android:textSize="@dimen/skip_episode_size" />
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:id="@+id/audio_tracks"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:visibility="gone">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
