fixed player control audio subtitle visibility issue in landscape mode

--- a/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
@@ -13,6 +13,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/fl_episode_next"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginEnd="16dp"
