--- a/brightcovelibrary/src/main/res/layout/layout_video_settings.xml
+++ b/brightcovelibrary/src/main/res/layout/layout_video_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -13,46 +13,33 @@
             android:id="@+id/title_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/select_video_quality"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/sukhumvittadmai_bold"
+            android:text="@string/settings"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/sukhumvittadmai_bold"
-            android:layout_marginStart="8dp" />
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleview"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title_video"
-            android:overScrollMode="never">
-
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <!-- <android.support.v7.widget.RecyclerView
-             android:id="@+id/recycleview"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_below="@+id/title_video"
-             android:overScrollMode="never"></android.support.v7.widget.RecyclerView>-->
+            android:layout_marginTop="16dp"
+            android:overScrollMode="never" />
 
         <Button
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_gravity="end"
             android:layout_marginStart="180dp"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="17dp"
             android:background="@android:color/transparent"
+            android:fontFamily="@font/sukhumvittadmai_bold"
             android:gravity="center"
             android:padding="8dp"
-            android:fontFamily="@font/sukhumvittadmai_bold"
             android:text="@string/cancel"
-            android:layout_below="@+id/recycleview"
             android:textColor="#f68b1f" />
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
