--- a/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_settings_layout.xml
@@ -6,17 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_mid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <FrameLayout
         android:id="@+id/fl_episode_prev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/fl_episode_next"
-        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintEnd_toEndOf="@id/guideline_mid"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginEnd="16dp"
         tools:background="#090909"
         tools:visibility="visible">
 
@@ -38,10 +45,12 @@
         android:id="@+id/fl_episode_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/fl_subtitle"
-        app:layout_constraintStart_toEndOf="@id/fl_episode_prev"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/guideline_mid"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="#090909"
         tools:visibility="visible">
@@ -58,55 +67,5 @@
             android:text="@string/next_episode"
             android:textColor="#FFF"
             android:textSize="@dimen/skip_episode_size" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/fl_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/fl_audio_tracks"
-        app:layout_constraintStart_toEndOf="@id/fl_episode_next"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="#090909"
-        tools:visibility="visible">
-
-        <TextView
-            android:id="@+id/tv_subtitles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/subtitles"
-            android:drawablePadding="8dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="@string/subtitles"
-            android:textColor="#FFF"
-            android:textSize="@dimen/skip_episode_size" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/fl_audio_tracks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fl_subtitle"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="#090909"
-        tools:visibility="visible">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawableStart="@drawable/subtitles"
-            android:drawablePadding="8dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="@string/audio"
-            android:textColor="#FFF"
-            android:textSize="15sp" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
