--- a/app/src/main/res/layout-sw720dp-land/activity_series_detail.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_series_detail.xml
@@ -222,10 +222,10 @@
                                                 android:textSize="@dimen/font_large"
                                                 tools:targetApi="p" />
 
-
-                                            <LinearLayout
+                                            <me.vipa.app.utils.CustomFlowLayout
                                                 android:layout_width="match_parent"
-                                                android:layout_height="wrap_content">
+                                                android:layout_height="wrap_content"
+                                                app:lineSpacing="8dp">
 
                                                 <TextView
                                                     android:id="@+id/vod_count"
@@ -235,18 +235,60 @@
                                                     android:layout_marginStart="2dp"
                                                     android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
                                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                                    android:text=""
                                                     android:textColor="?attr/sub_title"
                                                     android:textSize="@dimen/font_small" />
-                                                <TextView
-                                                    android:id="@+id/tv_4k"
+
+                                                <androidx.appcompat.widget.AppCompatImageView
+                                                    android:id="@+id/iv_4k"
                                                     android:layout_width="23dp"
                                                     android:layout_height="15dp"
-                                                    android:background="@drawable/image4k"
-                                                    android:layout_marginLeft="2dp"
+                                                    android:layout_marginStart="6dp"
                                                     android:layout_marginTop="2.5dp"
-                                                    android:visibility="gone"/>
-                                            </LinearLayout>
+                                                    android:visibility="gone"
+                                                    app:srcCompat="@drawable/image4k"
+                                                    tools:visibility="visible" />
+
+                                                <androidx.appcompat.widget.AppCompatImageView
+                                                    android:id="@+id/iv_audio_desc"
+                                                    android:layout_width="23dp"
+                                                    android:layout_height="15dp"
+                                                    android:layout_marginStart="6dp"
+                                                    android:layout_marginTop="2.5dp"
+                                                    android:visibility="gone"
+                                                    app:srcCompat="@drawable/ic_audio_desc"
+                                                    tools:visibility="visible" />
+
+                                                <androidx.appcompat.widget.AppCompatImageView
+                                                    android:id="@+id/iv_sign_lang"
+                                                    android:layout_width="23dp"
+                                                    android:layout_height="15dp"
+                                                    android:layout_marginStart="6dp"
+                                                    android:layout_marginTop="2.5dp"
+                                                    android:visibility="gone"
+                                                    app:srcCompat="@drawable/ic_sign_language"
+                                                    tools:visibility="visible" />
+
+                                                <androidx.appcompat.widget.AppCompatImageView
+                                                    android:id="@+id/iv_audio_track"
+                                                    android:layout_width="23dp"
+                                                    android:layout_height="15dp"
+                                                    android:layout_marginStart="6dp"
+                                                    android:layout_marginTop="2.5dp"
+                                                    android:visibility="gone"
+                                                    app:srcCompat="@drawable/ic_audio_track"
+                                                    tools:visibility="visible" />
+
+                                                <androidx.appcompat.widget.AppCompatImageView
+                                                    android:id="@+id/iv_closed_caption"
+                                                    android:layout_width="23dp"
+                                                    android:layout_height="15dp"
+                                                    android:layout_marginStart="6dp"
+                                                    android:layout_marginTop="2.5dp"
+                                                    android:visibility="gone"
+                                                    app:srcCompat="@drawable/ic_closed_caption"
+                                                    tools:visibility="visible" />
+
+                                            </me.vipa.app.utils.CustomFlowLayout>
 
 
                                             <LinearLayout
