--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -156,14 +156,14 @@
                                     android:id="@+id/movie_title"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_marginRight="@dimen/_4sdp"
+                                    android:layout_toLeftOf="@+id/mPremiumStatus"
                                     android:fontFamily="@font/sukhumvittadmai_bold"
                                     android:lineHeight="@dimen/movie_title_line_height"
                                     android:singleLine="true"
-                                    android:layout_marginRight="@dimen/_4sdp"
-                                    android:layout_alignParentLeft="true"
                                     android:text="@{responseApi.title}"
                                     android:textColor="?attr/title_color"
-                                    android:layout_toLeftOf="@+id/mPremiumStatus"
                                     android:textSize="@dimen/font_large"
                                     tools:targetApi="p" />
 
@@ -218,29 +218,71 @@
 
                             </RelativeLayout>
 
-
-
-                            <LinearLayout
+                            <me.vipa.app.utils.CustomFlowLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                app:lineSpacing="8dp">
 
-                                <TextView
+                            <TextView
                                     android:id="@+id/tag"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="2dp"
                                     android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:textColor="?attr/sub_title"
                                     android:textSize="@dimen/font_small" />
-                                <TextView
-                                    android:id="@+id/tv_4k"
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_4k"
                                     android:layout_width="23dp"
                                     android:layout_height="15dp"
-                                    android:background="@drawable/image4k"
-                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginStart="6dp"
                                     android:layout_marginTop="2.5dp"
-                                    android:visibility="gone"/>
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/image4k"
+                                    tools:visibility="visible" />
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_audio_desc"
+                                    android:layout_width="23dp"
+                                    android:layout_height="15dp"
+                                    android:layout_marginStart="6dp"
+                                    android:layout_marginTop="2.5dp"
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/ic_audio_desc"
+                                    tools:visibility="visible" />
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_sign_lang"
+                                    android:layout_width="23dp"
+                                    android:layout_height="15dp"
+                                    android:layout_marginStart="6dp"
+                                    android:layout_marginTop="2.5dp"
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/ic_sign_language"
+                                    tools:visibility="visible" />
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_audio_track"
+                                    android:layout_width="23dp"
+                                    android:layout_height="15dp"
+                                    android:layout_marginStart="6dp"
+                                    android:layout_marginTop="2.5dp"
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/ic_audio_track"
+                                    tools:visibility="visible" />
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_closed_caption"
+                                    android:layout_width="23dp"
+                                    android:layout_height="15dp"
+                                    android:layout_marginStart="6dp"
+                                    android:layout_marginTop="2.5dp"
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/ic_closed_caption"
+                                    tools:visibility="visible" />
 
                                 <TextView
                                     android:id="@+id/tv_premium"
@@ -255,10 +297,11 @@
                                     android:paddingBottom="@dimen/NontonSize3"
                                     android:text="@string/exclusive"
                                     android:textColor="@color/white"
+                                    tools:visibility="visible"
                                     android:textSize="@dimen/detailPremium"
                                     android:visibility="gone" />
 
-                            </LinearLayout>
+                            </me.vipa.app.utils.CustomFlowLayout>
 
 
                             <LinearLayout
