--- a/app/src/main/res/layout-land/activity_series_detail.xml
+++ b/app/src/main/res/layout-land/activity_series_detail.xml
@@ -50,10 +50,10 @@
                 app:srcCompat="@drawable/background_shadow" />
         </FrameLayout>
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="false">
+<!--        <androidx.core.widget.NestedScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:fillViewport="false">-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -501,7 +501,7 @@
                     </LinearLayout>
                 </FrameLayout>
             </RelativeLayout>
-        </androidx.core.widget.NestedScrollView>
+<!--        </androidx.core.widget.NestedScrollView>-->
     </RelativeLayout>
 
 </layout>
