--- a/app/src/main/res/layout-sw600dp-port/activity_series_detail.xml
+++ b/app/src/main/res/layout-sw600dp-port/activity_series_detail.xml
@@ -47,10 +47,10 @@
                 android:contentDescription="Series Backpress "
                 app:srcCompat="@drawable/background_shadow" />
         </FrameLayout>
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="false">
+<!--        <androidx.core.widget.NestedScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:fillViewport="false">-->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -500,7 +500,7 @@
                     </LinearLayout>
                 </FrameLayout>
             </RelativeLayout>
-        </androidx.core.widget.NestedScrollView>
+<!--        </androidx.core.widget.NestedScrollView>-->
     </RelativeLayout>
 
 </layout>
